# spdlog_fast_compile

./: CMakeLists.txt  README.md  log.cpp  log.h  main.c  main.cpp
